Amarok ChangeLog
================
(C) 2002-2014 the Amarok authors.


VERSION 2.8.1
  FEATURES:
   * Statistics synchronization between Amarok collections and
     Amarok 1.4, Amarok 2.x, Apple iTunes, Banshee, Clementine, and
     Rhythmbox track databases.
   * Usability of the Organize Files dialog has been improved.
   * Wikipedia can now be also used over SSL.

  CHANGES:
   * "Import" button under Configure Amarok -> Local Collection no longer
     serves to import statistics from Amarok 1.4 and iTunes, and has been
     renamed to "Import batch file" to reflect the change.
   * Configure Amarok -> Metadata tab includes new buttons to add and
     reconfigure synchronization targets.
   * When ffmpeg is not available, the Transcode dialog is no longer skipped; info message
     is shown instead. Patch by Jai Luthra. (BR 317902)
   * Amarok now uses some C++11 features. The subset used is defined by the 
     compilers currently supported by KDE.

  BUGFIXES:
   * Collection Browser no longer excessively expands the tree. (BR 300557)
   * Properly calculate and store Aft tags in mp4 files.  Patch By Stefano
     Pettini <stefano.pettini@gmail.com> (BR 332811)
   * Update Progress Slider when restoring from System Tray. Patch By Abhay
     Sombanshi <abhaysombanshi92@gmail.com> (BR 299883)
   * Update Jamendo to use new website. Patch By Yash Ladia
     <yashladia1@gmail.com> (BR 331934)
   * Allows CollectionBrowser filter to have length of almost 24 hours. (BR 291400)
   * Prevent creation of video stream when transcoding to Opus. Patch by Martin Brodbeck.
   * Fix crash when starting Amarok with an iPod mounted. (BR 329498)
   * Also fetch cover art from xiph-comments with METADATA_BLOCK_PICTURE tag.
     Patch by Martin Brodbeck <martin@brodbeck-online.de>. (BR 328451)
   * Fix crash on quit when Amarok is in the middle of fadeout. (BR 325723)
   * Prevent shared memory size errors for very large collections. (BR 327812)